--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "s-expression",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "s-expression parser with ' quote support",
   "main": "index.js",
+  "scripts": {
+      "test": "node test.js"
+  },
   "repository": {
       "type": "git",
       "url": "https://github.com/fwg/s-expression.git"
